# scala

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.aspect/: config.axl
.github/workflows/: ci.yaml
tools/format/: BUILD.bazel
tools/gazelle/: BUILD.bazel
